===============
lmirror changes
===============

NEXT (in development)
=====================

Bug fixes
+++++++++

* Content falling precisely on the end of a buffer would hang the client -
  fixed.

Changes
+++++++

* ``content.conf`` can now run an external program to control filtering. See
  the manual for details.

* ``lmirror serve`` can now perform inotify monitoring of sets, avoiding full
  disk scans on each change creation, at the cost of a full scan at server
  startup.

* There are now ``clean`` and ``install`` targets in the Makefile.

API Changes
+++++++++++

* ``l_mirror.journals.DiskUpdater`` can now callback to user code per-file.

0.0.2
=====

Changes
+++++++

* New journals will now include the mtime of files (but not directories, as
  directory mtime setting and reading is not portable). This change changes
  the disk format of journals, so 0.0.2 or newer is needed to read these
  journals.

* New command ``lmirror serve`` can serve out sets over HTTP (defaults to port
  8080).

0.0.1
=====

Changes
+++++++

* Added lmirror script and setup.py to install lmirror.

* Added lmirror init command which creates a simple mirror set and makes an
  initial journal.

* Added lmirror finish-change command which finishes an open change.

* Fixed command lookup for finish-change so that it can be used.

* Added lmirror start-change command which opens a change, permitting clients
  to not fail fatally when content is mismatched, but instead take a sensible
  action (such as pausing, spinning on the metadata, or rolling back quietly).

* Fixed finish-change not to write a journal if there are no changes to
  propogate.

* Added lmirror mirror command to perform a mirror run.

* Parsing PATH arguments which are not local no longer causes a traceback. 
  (Robert Collins, #542413)

* CLI UI can now log messages to ~/.cache/lmirror/log, and to the console.

* -v will now increase verbosity for all commands. In particular this causes